# codingame-bots

./: .gitignore  README.md  build.py  init_challenge.ps1  merge_utils_into_bot.py  old_build.py  pyproject.toml  requirements.txt  setup.py
bot_utils/: tree.py
botlibs/: graph.py  tree.py  trigonometry.py
botlibs/graph/: algorithms.py  classes.py  create.py
botlibs/utils/: graph.py
bots/: chemical_equation_balancing_built.py  code_vs_zombies_built.py  death_first_search_episode_1.py  death_first_search_episode_1_built.py  fall_challenge_2023_built.py  fall_challenge_2024_built.py  summer_challenge_2024_built.py
bots/chemical_equation_balancing/: assets.py  balancer.py  bot.py
bots/death_first_search_ep1/: bot.py  my_bot.py
bots/death_first_search_episode_1/: bot.py
bots/fall_challenge_2023/: bot.py  constants.py  game_data.py  game_loop.py  singletons.py
bots/fall_challenge_2024/: game_loop.py
bots/mad_pod_racing/: my_bot.py
bots/power_of_thor/: my_bot.py
bots/summer_challenge_2024/: game_loop.py  mini_games.py  singletons.py
bots/template_bot/: bot.py
builderlibs/: aggregater.py  challenge.py  dependencies.py  directory_scanner.py  fileutils.py  logger.py  old_directory_scanner.py  optimizer.py
conf/: logs.yaml
docs/: build_one_file_script.md
fall_challenge_2022/: my_bot.py  mybot.py  silverbot.py
src/: build.py
test/test_botlibs/: test_tree.py
tests/: conftest.py  constants.py  test_tree.py
tests/test_botlibs/: test_graph.py  test_tree.py
tests/test_builderlibs/: conftest.py  test_aggregater.py  test_challenge.py  (+3 more)
(+49 files in other folders)
