[tool.poetry]
name = "codingame-bots"
version = "0.1.0"
description = "tools to help coding bots on codingame"
authors = ["Matt Matt <matthieu.chambery@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.1"
numpy = "^1.26.0"
PyYAML = "6.0.1"
scipy = "1.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
